// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewCreatedPolicy expect to render without error 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ReviewCreatedPolicy)>
    <ReviewCreatedPolicy
      benchmarkId="a5e7f1ea-e63c-40be-a17a-c2a247c11e10"
      complianceThreshold={100}
      dispatch={[Function]}
      name="C2S for Red Hat Enterprise Linux 6"
      osMinorVersionCounts={
        Array [
          Object {
            "count": 10,
            "osMinorVersion": 7,
          },
          Object {
            "count": 3,
            "osMinorVersion": 5,
          },
        ]
      }
      parentProfileName="C2S for Red Hat Enterprise Linux 6"
      refId="xccdf_org.ssgproject.content_profile_C2S"
      rulesCount={1}
    >
      <TextContent>
        <div
          className="pf-c-content"
        >
          <Text
            component="h1"
          >
            <h1
              className=""
              data-pf-content={true}
            >
              Review
            </h1>
          </Text>
          <Text>
            <p
              className=""
              data-pf-content={true}
            >
              Review your SCAP policy before finishing.
            </p>
          </Text>
          <Text
            component="h3"
          >
            <h3
              className=""
              data-pf-content={true}
            >
              C2S for Red Hat Enterprise Linux 6
            </h3>
          </Text>
          <TextList
            component="dl"
          >
            <dl
              className=""
              data-pf-content={true}
            >
              <TextListItem
                component="dt"
              >
                <dt
                  className=""
                  data-pf-content={true}
                >
                  Policy type
                </dt>
              </TextListItem>
              <TextListItem
                component="dd"
              >
                <dd
                  className=""
                  data-pf-content={true}
                >
                  C2S for Red Hat Enterprise Linux 6
                </dd>
              </TextListItem>
              <TextListItem
                component="dt"
              >
                <dt
                  className=""
                  data-pf-content={true}
                >
                  Compliance threshold
                </dt>
              </TextListItem>
              <TextListItem
                component="dd"
              >
                <dd
                  className=""
                  data-pf-content={true}
                >
                  100
                  %
                </dd>
              </TextListItem>
              <TextListItem
                component="dt"
              >
                <dt
                  className=""
                  data-pf-content={true}
                >
                  Systems
                </dt>
              </TextListItem>
              <TextListItem
                component="dd"
              >
                <dd
                  className=""
                  data-pf-content={true}
                >
                  <TextList
                    component="dl"
                  >
                    <dl
                      className=""
                      data-pf-content={true}
                    >
                      <TextListItem
                        component="dt"
                        style={
                          Object {
                            "font-weight": "normal",
                          }
                        }
                      >
                        <dt
                          className=""
                          data-pf-content={true}
                          style={
                            Object {
                              "font-weight": "normal",
                            }
                          }
                        >
                          RHEL 
                          7
                          .
                          7
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                          data-pf-content={true}
                        >
                          10
                        </dd>
                      </TextListItem>
                      <TextListItem
                        component="dt"
                        style={
                          Object {
                            "font-weight": "normal",
                          }
                        }
                      >
                        <dt
                          className=""
                          data-pf-content={true}
                          style={
                            Object {
                              "font-weight": "normal",
                            }
                          }
                        >
                          RHEL 
                          7
                          .
                          5
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                          data-pf-content={true}
                        >
                          3
                        </dd>
                      </TextListItem>
                    </dl>
                  </TextList>
                </dd>
              </TextListItem>
            </dl>
          </TextList>
        </div>
      </TextContent>
    </ReviewCreatedPolicy>
  </Connect(ReviewCreatedPolicy)>
</Provider>
`;

exports[`ReviewCreatedPolicy should render a spinner while loading 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ReviewCreatedPolicy)>
    <ReviewCreatedPolicy
      benchmarkId="a5e7f1ea-e63c-40be-a17a-c2a247c11e10"
      complianceThreshold={100}
      dispatch={[Function]}
      name="C2S for Red Hat Enterprise Linux 6"
      osMinorVersionCounts={
        Array [
          Object {
            "count": 10,
            "osMinorVersion": 7,
          },
          Object {
            "count": 3,
            "osMinorVersion": 5,
          },
        ]
      }
      parentProfileName="C2S for Red Hat Enterprise Linux 6"
      refId="xccdf_org.ssgproject.content_profile_C2S"
      rulesCount={1}
    >
      <Spinner>
        <div
          className="ins-c-spinner"
          role="status"
        >
          <span
            className="pf-u-screen-reader"
          >
            Loading...
          </span>
        </div>
      </Spinner>
    </ReviewCreatedPolicy>
  </Connect(ReviewCreatedPolicy)>
</Provider>
`;
